# fprime-python-ref

./: .gitmodules  CMakeLists.txt  NOTES.md  README.md  project.cmake  settings.ini
Components/: CMakeLists.txt
Components/PythonComponent/: CMakeLists.txt  PythonComponent.fpp  PythonComponent.hpp  PythonComponent.py  PythonComponentComponentAi.xml
Components/PythonComponent/docs/: sdd.md
Components/StandardBlankComponent/: CMakeLists.txt  StandardBlankComponent.cpp  StandardBlankComponent.fpp  StandardBlankComponent.hpp
Components/StandardBlankComponent/docs/: sdd.md
TestDeployment/: CMakeLists.txt  Main.cpp
TestDeployment/Top/: CMakeLists.txt  TestDeploymentPackets.xml  instances.fpp  topology.fpp
